# brayton

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
examples/wasm/: README.md  index.html
src/: config.rs  cycle.rs  effectiveness.rs  emscripten.rs  error.rs  facade.rs  fluids.rs  lib.rs  operating_point.rs  python.rs  recomp_facade.rs  recompression.rs  simple.rs  solution.rs  thermo.rs  wasm.rs
src/facade/: recomp.rs  simple.rs
src/recompression/: config.rs  cycle.rs  error.rs  solution.rs
src/simple/: config.rs  cycle.rs  solution.rs
tests/: simple_design_point.rs  test_brayton.py
web/: app.js  brayton.js  cycle-chart.js  index.html  recup-chart.js  style.css
