[package]
name = "brayton"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:serde", "dep:serde_json"]

[dependencies]
twine-models = { version = "0.3", features = ["coolprop-static"] }
twine-core = "0.6"
uom = "0.36"
thiserror = "2.0.16"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
approx = "0.5.1"
